# C-TASKS-VK-EDU

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md
.github/workflows/: ci.yml
lib/contract/: CMakeLists.txt
lib/contract/include/: contract.h
lib/contract/src/: contract.c
lib/contract/tests/: CMakeLists.txt
lib/contract/tests/src/: contract_test.cpp
lib/errors/include/: errors.h
lib/mails/: CMakeLists.txt
lib/mails/include/: generators.h  mails.h
lib/mails/src/: generators.c  mails.c
lib/mails/tests/: CMakeLists.txt
lib/mails/tests/src/: generators_test.cpp  mails_test.cpp
lib/sender_find/: CMakeLists.txt
lib/sender_find/include/: sender_find.h
lib/sender_find/src/: sender_find_consistent.c  sender_find_parallel.c
lib/sender_find/tests/: CMakeLists.txt
lib/sender_find/tests/src/: compare_reports.cpp  sender_find_test.cpp
lib/utils/: CMakeLists.txt
lib/utils/include/: utils.h
lib/utils/src/: utils.c
lib/utils/tests/: CMakeLists.txt
lib/utils/tests/src/: utils_test.cpp
project/: CMakeLists.txt
project/include/: data_read.h
project/src/: data_read.c  main.c
src/: main.c
